2.1.0/_sources/gallery/userdemo/demo_gridspec03.rst.txt


.. _sphx_glr_gallery_userdemo_demo_gridspec03.py:


===============
Demo Gridspec03
===============





.. image:: /gallery/userdemo/images/sphx_glr_demo_gridspec03_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    from matplotlib.gridspec import GridSpec


    def make_ticklabels_invisible(fig):
        for i, ax in enumerate(fig.axes):
            ax.text(0.5, 0.5, "ax%d" % (i+1), va="center", ha="center")
            ax.tick_params(labelbottom=False, labelleft=False)


    # demo 3 : gridspec with subplotpars set.

    fig = plt.figure()

    fig.suptitle("GridSpec w/ different subplotpars")

    gs1 = GridSpec(3, 3)
    gs1.update(left=0.05, right=0.48, wspace=0.05)
    ax1 = plt.subplot(gs1[:-1, :])
    ax2 = plt.subplot(gs1[-1, :-1])
    ax3 = plt.subplot(gs1[-1, -1])

    gs2 = GridSpec(3, 3)
    gs2.update(left=0.55, right=0.98, hspace=0.05)
    ax4 = plt.subplot(gs2[:, :-1])
    ax5 = plt.subplot(gs2[:-1, -1])
    ax6 = plt.subplot(gs2[-1, -1])

    make_ticklabels_invisible(fig)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.099 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: demo_gridspec03.py <demo_gridspec03.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: demo_gridspec03.ipynb <demo_gridspec03.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
